# agentic-poc

./: .env.example  .gitignore  CITATION.cff  README.md  mlflow.db  pyproject.toml  sitecustomize.py
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/: agentic-testgen-plan.md  architecture.md  todo.md
examples/: model_matrix.toml
src/agentic_testgen/: __init__.py  __main__.py  agents.py  checkpointing.py  cli.py  config.py  coverage.py  gitlab.py  logging.py  memory.py  models.py  reporting.py  tools.py  tracing.py  utils.py  workspace.py
src/agentic_testgen/agents/: agents.py  custom_react.py  dspy_runtime.py  programs.py  repo_analysis_agent.py  self_improve.py  self_improve_dataset.py  signatures.py  subagent_dispatcher.py  test_writing_agent.py
src/agentic_testgen/analysis/: coverage.py  coverage_comparison.py  coverage_reward.py  evaluation.py  reporting.py
src/agentic_testgen/core/: config.py  logging.py  models.py  prompt_registry.py  utils.py
src/agentic_testgen/execution/: checkpointing.py  memory.py  tools.py  workspace.py
src/agentic_testgen/integrations/: gitlab.py  tracing.py
tests/: conftest.py  test_batching.py  test_coverage.py  test_evaluation.py  test_memory.py  test_redaction.py  test_reporting.py  test_subagent_dispatcher.py  test_tools.py  test_workflow.py  test_workspace.py
tests/fixtures/repos/multi-module-root/: pom.xml
tests/fixtures/repos/multi-module-root/app/: pom.xml
tests/fixtures/repos/simple-service/: pom.xml
(+3 files in other folders)
