[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-testgen"
version = "0.1.0"
description = "DSPy-based test generation platform for GitLab Maven repos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dspy>=3.1.3",
    "dspy-ai>=3.1.3",
    "groq>=1.1.2",
    "mlflow>=3.11.1",
    "pip-system-certs>=5.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
]

[project.scripts]
testgen = "agentic_testgen.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
